--- a/org.sirius.runtime/pom.xml
+++ b/org.sirius.runtime/pom.xml
@@ -43,11 +43,13 @@
     <dependency>
       <groupId>org.sirius</groupId>
       <artifactId>org.sirius.common</artifactId>
+		<version>${project.version}</version>
     </dependency>
     
     <dependency>
       <groupId>org.sirius</groupId>
       <artifactId>org.sirius.sdk</artifactId>
+		<version>${project.version}</version>
     </dependency>
   </dependencies>
   
