--- a/org.sirius.backend.jvm/pom.xml
+++ b/org.sirius.backend.jvm/pom.xml
@@ -13,67 +13,58 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<!--   	<version.asm>7.3.1</version.asm> -->
-		<!--  	<version.asm>9.1</version.asm> -->
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.sirius</groupId>
 			<artifactId>org.sirius.common</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>
 				org.sirius</groupId>
 			<artifactId>org.sirius.frontend</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>
 				org.sirius</groupId>
 			<artifactId>org.sirius.backend.core</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>
-				org.sirius</groupId>
+			<groupId>org.sirius</groupId>
 			<artifactId>org.sirius.sdk</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>
-				org.sirius</groupId>
+			<groupId>org.sirius</groupId>
 			<artifactId>org.sirius.runtime</artifactId>
-			<!-- 	    <scope>test</scope> -->
+			<version>${project.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
 		<dependency>
-			<groupId>
-				org.ow2.asm</groupId>
+			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm</artifactId>
 			<version>${libs.asm.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>
-				org.ow2.asm</groupId>
+			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm-util</artifactId>
 			<version>${libs.asm.version}</version>
 			<scope>
 				test</scope>
 		</dependency>
 
-		<!--    <dependency>
-     <groupId>org.testng</groupId>
-		<artifactId>testng</artifactId>
-     <scope>test</scope>
-   </dependency>
- -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>
-				junit-jupiter-api</artifactId>
+			<artifactId>junit-jupiter-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -89,22 +80,27 @@
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
-			<artifactId>
-				hamcrest</artifactId>
+			<artifactId>hamcrest</artifactId>
 			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
 
+
+	<build>
+	</build>
+
 	<reporting>
 		<plugins>
-<!--			<plugin>
+		
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<configuration>
-					<aggregate>true</aggregate>
+					<aggregate>false</aggregate>
 				</configuration>
 			</plugin>
--->		</plugins>
+		</plugins>
 	</reporting>
+	
 </project>
