--- a/org.sirius.compiler/pom.xml
+++ b/org.sirius.compiler/pom.xml
@@ -183,8 +183,6 @@
         </configuration>
       </plugin>
       
-      
-      
     </plugins>
   </build>
   
@@ -192,52 +190,57 @@
   	<dependency>
 	    <groupId>org.sirius</groupId>
 	    <artifactId>org.sirius.common</artifactId>
+		<version>${project.version}</version>
   	</dependency>
   
   	<dependency>
 	    <groupId>org.sirius</groupId>
 	    <artifactId>org.sirius.frontend</artifactId>
+		<version>${project.version}</version>
   	</dependency>
   
   	<dependency>
 	    <groupId>org.sirius</groupId>
 	    <artifactId>org.sirius.backend.core</artifactId>
+		<version>${project.version}</version>
   	</dependency>
-  
-  	<dependency>
-	    <groupId>org.sirius</groupId>
-	    <artifactId>org.sirius.backend.jvm</artifactId>
-  	</dependency>
+
+	<dependency>
+		<groupId>org.sirius</groupId>
+		<artifactId>org.sirius.backend.jvm</artifactId>
+		<version>${project.version}</version>
+	</dependency>
   
   	<dependency>
 	    <groupId>org.sirius</groupId>
 	    <artifactId>org.sirius.runtime</artifactId>
-  	</dependency>
+		<version>${project.version}</version>
+	</dependency>
   
    	<dependency>
 		<groupId>org.junit.jupiter</groupId>
 		<artifactId>junit-jupiter-api</artifactId>
-	</dependency>
+		</dependency>
 	<dependency>
 		<groupId>org.junit.jupiter</groupId>
 		<artifactId>junit-jupiter-params</artifactId>
-	</dependency>
+		</dependency>
 	<dependency>
 		<groupId>org.mockito</groupId>
 		<artifactId>mockito-core</artifactId>
-	</dependency>
+		</dependency>
 	<dependency>
 		<groupId>org.mockito</groupId>
 		<artifactId>mockito-junit-jupiter</artifactId>
-	</dependency>
+		</dependency>
 	
     <dependency>
 		<groupId>org.hamcrest</groupId>
 		<artifactId>hamcrest</artifactId>
 		<scope>test</scope>
-	</dependency>
-  
-<!--     <dependency>
+		</dependency>
+
+		<!--     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <scope>test</scope>
