--- a/org.sirius.frontend/pom.xml
+++ b/org.sirius.frontend/pom.xml
@@ -15,11 +15,13 @@
     <dependency>
       <groupId>org.sirius</groupId>
       <artifactId>org.sirius.common</artifactId>
+		<version>${project.version}</version>
     </dependency>
     
     <dependency>
       <groupId>org.sirius</groupId>
       <artifactId>org.sirius.sdk</artifactId>
+		<version>${project.version}</version>
     </dependency>
 
 	<dependency>
@@ -129,6 +131,19 @@
         </configuration>
       </plugin>
 
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-failsafe-plugin</artifactId>
+<version>2.22.2</version>
+<executions>
+	<execution>
+		<goals>
+			<goal>verify</goal>
+			<goal>integration-test</goal>
+		</goals>
+	</execution>
+</executions>
+</plugin>
 	
     </plugins>
   </build>
