--- a/org.sirius.common/pom.xml
+++ b/org.sirius.common/pom.xml
@@ -32,6 +32,20 @@
 	</dependencies>
 	
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.3.0</version>
+<!--				<configuration>
+					<archive>
+						<manifestEntries>
+							<Automatic-Module-Name>org.sirius.common</Automatic-Module-Name>
+						</manifestEntries>
+					</archive>
+				</configuration>
+-->			</plugin>
+		</plugins>
 	</build>
 	
 	<reporting>
