--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@ in <Sirius>/target/staging/
 	</properties>
 
 	<modules>
+
 		<module>org.sirius.common</module>
 
 		<module>org.sirius.sdk</module>
@@ -51,7 +52,7 @@ in <Sirius>/target/staging/
 		<module>org.sirius.backend.core</module>
 		<module>org.sirius.backend.jvm</module>
 
-	<!--	<module>deleteMe</module>-->
+<!--		<module>deleteMe</module>-->
 	</modules>
 
 	<dependencyManagement>
@@ -222,6 +223,31 @@ in <Sirius>/target/staging/
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>3.4.2</version>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.5.0</version>
+				<configuration>
+					<doclint>none</doclint>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<id>non-aggregate</id>
+						<reports>
+							<report>javadoc</report>
+						</reports>
+					</reportSet>
+					<reportSet>
+						<id>aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>aggregate</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			
 		</plugins>
 	</reporting>
 	<!-- **** PROFILES **** -->
@@ -234,6 +260,7 @@ in <Sirius>/target/staging/
 			</activation>
 			<build>
 				<plugins>
+
 					<plugin>
 						<groupId>org.asciidoctor</groupId>
 						<artifactId>asciidoctor-maven-plugin</artifactId>
@@ -282,6 +309,26 @@ in <Sirius>/target/staging/
 						</executions>
 						
 					</plugin>
+					
+					<!--
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						
+		        <configuration>
+		          <doclint>none</doclint> <! - - Temp, ignore (numerous) missing docs - - >
+		          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+		        </configuration>
+
+					</plugin>
+-->	
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+					</plugin>				
+					
+					
+					
 				</plugins>
 			</build>
 		</profile>
