--- a/pom.xml
+++ b/pom.xml
@@ -135,8 +135,6 @@ in <Sirius>/target/staging/
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
 					<version>4.0.0-M7</version>
-					<configuration>
-					</configuration>
 					<dependencies>
 
 					</dependencies>
@@ -197,6 +195,8 @@ in <Sirius>/target/staging/
 				<version>3.0.0</version>
 				<executions>
 					<execution>
+						<id>integration-tests</id>
+						<phase>integration-test</phase>
 						<goals>
 							<goal>integration-test</goal>
 							<goal>verify</goal>
@@ -224,13 +224,13 @@ in <Sirius>/target/staging/
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<configuration>
 					<aggregate>true</aggregate>
-					<alwaysGenerateFailsafeReport>true</alwaysGenerateFailsafeReport>
-					<alwaysGenerateSurefireReport>true</alwaysGenerateSurefireReport>
+					<alwaysGenerateFailsafeReport>false</alwaysGenerateFailsafeReport>
+					<alwaysGenerateSurefireReport>false</alwaysGenerateSurefireReport>
 					<linkXRef>false</linkXRef>
 				</configuration>
 			</plugin>
 			<plugin>
-				<inherited>true</inherited>
+				<inherited>false</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>3.4.2</version>
@@ -339,7 +339,19 @@ in <Sirius>/target/staging/
 						<artifactId>maven-javadoc-plugin</artifactId>
 					</plugin>				
 					
-					
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-site-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>site</id>
+								<phase>site</phase>
+								<configuration>
+									
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 					
 				</plugins>
 			</build>
