Upgraded a few tools (antlr etc). Tried to ad lombok (failed for now). Reorganized grammar files.

--- a/org.sirius.backend.jvm/pom.xml
+++ b/org.sirius.backend.jvm/pom.xml
@@ -93,10 +93,22 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 		</dependency>
+		
+<!--		<dependency>-->
+<!--			<groupId>org.projectlombok</groupId>-->
+<!--			<artifactId>lombok</artifactId>-->
+<!--		</dependency>-->
 	</dependencies>
-
-
+	
 	<build>
+		<plugins>
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-compiler-plugin</artifactId>-->
+<!--				<version>3.11.0</version>-->
+				
+<!--			</plugin>-->
+		</plugins>
 	</build>
 
 	<reporting>
