--- a/org.sirius.frontend/pom.xml
+++ b/org.sirius.frontend/pom.xml
@@ -19,40 +19,33 @@
 		</dependency>
 
 		<dependency>
-			<groupId>
-				org.sirius</groupId>
+			<groupId>org.sirius</groupId>
 			<artifactId>org.sirius.sdk</artifactId>
-			<version>
-				${project.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>
-				org.junit.jupiter</groupId>
+			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>
-				org.junit.jupiter</groupId>
+			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-params</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>
-				org.hamcrest</groupId>
+			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest</artifactId>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>
-				org.mockito</groupId>
+			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>
-				org.mockito</groupId>
+			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -76,16 +69,14 @@
 
 		<resources>
 			<resource>
-				<directory>
-					build/generated-sources/antlr4</directory>
+				<directory>build/generated-sources/antlr4</directory>
 				<!-- <directory>target/generated-sources/antlr4</directory> -->
 				<excludes>
 					<exclude>**/*.java</exclude>
 				</excludes>
 			</resource>
 			<resource>
-				<directory>
-					src/main/grammar</directory>
+				<directory>src/main/grammar</directory>
 				<excludes>
 					<exclude>**/*.java</exclude>
 				</excludes>
@@ -117,7 +108,8 @@
 					<outputDirectory>target/generated-sources/antlr4/</outputDirectory> -->
 					<!--
 					<outputDirectory>build/generated-source/antlr4/org/sirius/frontend/parser</outputDirectory> -->
-					<outputDirectory>target/generated-sources/antlr4/org/sirius/frontend/parser</outputDirectory>
+					<outputDirectory>
+						target/generated-sources/antlr4/org/sirius/frontend/parser</outputDirectory>
 
 
 					<!--
@@ -125,7 +117,7 @@
 					<sourceDirectory>
 						src/main/antlr</sourceDirectory>
 					<!--        	<libDirectory>src/main/antlr/imports</libDirectory>-->
-					<libDirectory>src/main/antlr</libDirectory>
+					<libDirectory>src/main/antlr/libs</libDirectory>
 
 					<!--        	<libDirectory>src/main/antlr</libDirectory>-->
 
